Fixed margin issue on mobile.

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -3,7 +3,7 @@ button {
 	border-style: solid;
 	border-width: 1px;
 	font-size: 1.1rem;
-	margin: 0 .5rem 0 0;
+	margin: 1rem .5rem 1rem 0;
 	padding-top: .75rem;
 	padding-right: 5.4rem;
 	padding-left: 5.4rem;
